fix: add tranclation

--- a/became-mentor-popup.html
+++ b/became-mentor-popup.html
@@ -3,7 +3,7 @@
         <div class="popup__close"></div>
         <div class="popup__title-group">
             <h2 class="popup__title">СТАТИ МЕНТОРОМ</h2>
-            <p class="popup__sub-title">Залиште ваші контактні дані, і ми вам обов'язково зателефонуємо!</p>
+            <p class="popup__sub-title">Залиште Ваші контактні дані, і ми Вам обов'язково зателефонуємо!</p>
         </div><a class="back-link">Назад </a>
         <form class="form" action="POST" id="feedbackForm">
             <label class="required" for="name">
