--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <div class="col">
             <div class="consult__title">
               <h2>Впізнаєте в цих питаннях себе?</h2>
-              <p class="consult__sub-title">Якщо так, допоможемо знайти перевіреного репетитора з програмування для Вас чи вашої дитини</p>
+              <p class="consult__sub-title">Якщо так, допоможемо знайти перевіреного репетитора з програмування для Вас чи Вашої дитини</p>
             </div>
             <a class="consult__btn btn" href="#callback-section">Отримати консультацію менеджера</a>
           </div>
@@ -709,7 +709,7 @@
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Все добре, після вашої допомоги, як магічний пендель пішло діло!
+                  Все добре, після ашої допомоги, як магічний пендель пішло діло!
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
@@ -790,7 +790,7 @@
           <div class="accordion__item">
             <div class="accordion__header">Яка тривалість навчання?</div>
             <div class="accordion__content">
-              <strong>Відповідь: </strong>Тривалість навчання залежить від ваших початкових навичок та індивідуального темпу освоєння
+              <strong>Відповідь: </strong>Тривалість навчання залежить від Ваших початкових навичок та індивідуального темпу освоєння
               матеріалу. За перші 3 місяці навчання будуть базові знання, через 6 місяців буде хороша база, інший час - це практика
               (рекомендується від 3х до 6 місяців).
             </div>
@@ -815,7 +815,7 @@
               <strong>Відповідь: </strong> Ми надаємо підтримку в працевлаштуванні для наших випускників, а саме: допомагаємо скласти
               релевантне резюме, надаємо сертифікат та рекомендаційний лист, який не тільки підтверджує отримані знання та навички, а і
               підвищить шанси знайти роботу. Наші репетитори мають багатий практичний досвід на реальних проектах і готові поділитись ним з
-              вами.
+              Вами.
             </div>
           </div>
           <div class="accordion__item">
@@ -846,14 +846,14 @@
         <div class="section-title">Зворотній зв’язок</div>
         <form class="form" id="callbackForm">
           <label class="required">
-            <input maxlength="30" class="name" type="text" name="name" placeholder="Ім’я" required="required" />
+            <input maxlength="30" class="name" type="text" name="name" placeholder="Ім’я" required="required" title="будь ласка, заповніть це поле" />
           </label>
           <div class="input-wrapper">
             <label class="required" for="phone">
-              <input class="phone" type="phone" name="phone" placeholder="Номер телефона" required="required" />
+              <input class="phone" type="phone" name="phone" placeholder="Номер телефону" required="required" title="будь ласка, заповніть це поле" />
             </label>
             <label class="required">
-              <input class="email" type="email" name="email" placeholder="E-mail" required="required" />
+              <input class="email" type="email" name="email" placeholder="E-mail" required="required" title="будь ласка, заповніть це поле" />
             </label>
           </div>
           <select class="select-wherefrom custom-select" name="wherefrom" id="wherefrom">
@@ -1348,7 +1348,7 @@
         <div class="popup__close"></div>
         <div class="popup__title-group">
           <h2 class="popup__title">Стати репетитором</h2>
-          <p class="popup__sub-title">Залиште ваші контактні дані, і ми вам обов'язково зателефонуємо!</p>
+          <p class="popup__sub-title">Залиште Ваші контактні дані, і ми Вам обов'язково зателефонуємо!</p>
         </div>
         <a class="back-link">Назад </a>
         <form class="form" action="POST" id="mentorForm">
