--- a/about-us.html
+++ b/about-us.html
@@ -132,7 +132,7 @@
                 </li>
                 <li>
                     <span class="li-title">Спільнота професіоналів:</span>
-                    <p>В N-Code ви будете частиною спільноти амбітних студентів та 
+                    <p>В N-Code Ви будете частиною спільноти амбітних студентів та 
                         досвідчених практикуючих спеціалістів-наставників, що стимулює навчання та обмін знаннями.</p>
                 </li>
                 <li>
@@ -220,7 +220,7 @@
           <div class="popup__close"></div>
           <div class="popup__title-group">
             <h2 class="popup__title">Стати репетитором</h2>
-            <p class="popup__sub-title">Залиште ваші контактні дані, і ми вам обов'язково зателефонуємо!</p>
+            <p class="popup__sub-title">Залиште Ваші контактні дані, і ми Вам обов'язково зателефонуємо!</p>
           </div>
           <a class="back-link">Назад </a>
           <form class="form" action="POST" id="mentorForm">
