--- a/tutors.html
+++ b/tutors.html
@@ -567,7 +567,7 @@
         <div class="popup__close"></div>
         <div class="popup__title-group">
           <h2 class="popup__title">Стати репетитором</h2>
-          <p class="popup__sub-title">Залиште ваші контактні дані, і ми вам обов'язково зателефонуємо!</p>
+          <p class="popup__sub-title">Залиште Ваші контактні дані, і ми Вам обов'язково зателефонуємо!</p>
         </div>
         <a class="back-link">Назад </a>
         <form class="form" action="POST" id="mentorForm">
