feat: remove max-height from became mentor modal

--- a/about-us.html
+++ b/about-us.html
@@ -216,7 +216,7 @@
         </div>
       </footer>
       <div class="popup popap-templ became-mentor-popup">
-        <div class="popup-body">
+        <div class="popup-body popup-body_unlimited">
           <div class="popup__close"></div>
           <div class="popup__title-group">
             <h2 class="popup__title">Стати репетитором</h2>
