--- a/tutors.html
+++ b/tutors.html
@@ -563,7 +563,7 @@
     </div>
 
     <div class="popup popap-templ became-mentor-popup">
-      <div class="popup-body">
+      <div class="popup-body popup-body_unlimited">
         <div class="popup__close"></div>
         <div class="popup__title-group">
           <h2 class="popup__title">Стати репетитором</h2>
