--- a/feedback.html
+++ b/feedback.html
@@ -347,8 +347,8 @@
             <div class="col">
               <p class="footer__title">Контакти</p>
               <ul class="footer__list">
-                <li><a href="mailto:ncode.study@gmail.com">ncode.study@gmail.com</a></li>
-                <li><a href="tel:380686272727">+38 (068)-627-27-27</a></li>
+                <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+                <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
               </ul>
             </div>
             <div class="col">
