--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <span class="header-card__arrow"></span>
               </div>
               <ul class="header-card__text">
-                <li>Хочеш розібратись у Javascript, React, та супутніх технологіях(Redux, MobX, React Query, Apollo GraphQl)?</li>
+                <li>Хочеш розібратись у Javascript, React, та супутніх технологіях (Redux, MobX, React Query, Apollo GraphQl)?</li>
                 <li>Світчер чи джун і не знаєш з чого почати професійний розвиток в галузі Front-End?</li>
                 <li>Складно знайти першу роботу або не можеш розібратись з тестовим?</li>
                 <li>Ваша дитина хоче вчитись програмувати і потрібен професійний репетитор?</li>
@@ -185,7 +185,7 @@
           </div>
           <div class="col">
             <ul class="consult__list">
-              <li>Хочеш розібратись у Javascript, React, та супутніх технологіях(Redux, MobX, React Query, Apollo GraphQl)?</li>
+              <li>Хочеш розібратись у Javascript, React, та супутніх технологіях (Redux, MobX, React Query, Apollo GraphQl)?</li>
               <li>Світчер чи джун і не знаєш з чого почати професійний розвиток в галузі Front-End?</li>
               <li>Складно знайти першу роботу або не можеш розібратись з тестовим?</li>
               <li>Ваша дитина хоче вчитись програмувати і потрібен професійний репетитор?</li>
@@ -200,7 +200,7 @@
         <div class="container">
           <div class="advantages__item">
             <span class="item__num">01</span>
-            <p>Наші репетитори мають практичний досвід в IT від 1 до 10 років</p>
+            <p>Наші репетитори мають практичний досвід в IT </br> від 1 до 10 років</p>
           </div>
           <div class="advantages__item">
             <span class="item__num">02</span>
@@ -220,7 +220,7 @@
           </div>
           <div class="advantages__item">
             <span class="item__num">06</span>
-            <p>Допомагаємо скласти резюме та підготуватись до співбесіди</p>
+            <p>Допомагаємо скласти резюме та підготуватись </br> до співбесіди</p>
           </div>
           <div class="advantages__item">
             <span class="item__num">07</span>
@@ -228,7 +228,7 @@
           </div>
           <div class="advantages__item">
             <span class="item__num">08</span>
-            <p>Сертифікат\рекомендації в залежності від отриманих компетенцій</p>
+            <p>Сертифікат/рекомендації в залежності </br> від отриманих компетенцій</p>
           </div>
         </div>
       </section>
@@ -433,7 +433,7 @@
               <div class="itc-slider-item">
                 <p class="slider-step">Крок 1</p>
                 <p class="slider-title">Заповнити заявку</p>
-                <p class="slider-text">Залишити заявку у формі зворотнього зв’язку чи подзвонити +38(068)-627-27-27. </p>
+                <p class="slider-text">Залишити заявку у формі зворотнього зв’язку чи подзвонити +38(068) 627-27-27. </p>
               </div>
               <div class="itc-slider-item">
                 <p class="slider-step">Крок 2</p>
@@ -890,8 +890,8 @@
           <div class="col">
             <p class="footer__title">Контакти</p>
             <ul class="footer__list">
-              <li><a href="mailto:ncode.study@gmail.com">ncode.study@gmail.com</a></li>
-              <li><a href="tel:380686272727">+38 (068)-627-27-27</a></li>
+              <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+              <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
             </ul>
           </div>
           <div class="col">
