added tiktok icon

--- a/about-us.html
+++ b/about-us.html
@@ -91,6 +91,12 @@
                   />
                 </svg>
               </a>
+              <a class="social-ico" href="https://www.tiktok.com/@n_code.study" target="_blank">
+                <svg width="30" height="30" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M22 6.83333V16.1667C22 17.7138 21.3854 19.1975 20.2915 20.2915C19.1975 21.3854 17.7138 22 16.1667 22H6.83333C5.28624 22 3.80251 21.3854 2.70854 20.2915C1.61458 19.1975 1 17.7138 1 16.1667V6.83333C1 5.28624 1.61458 3.80251 2.70854 2.70854C3.80251 1.61458 5.28624 1 6.83333 1H16.1667C17.7138 1 19.1975 1.61458 20.2915 2.70854C21.3854 3.80251 22 5.28624 22 6.83333Z" fill="#0B2235" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M9.25 11.5C8.60721 11.5 7.97886 11.6906 7.4444 12.0477C6.90994 12.4048 6.49338 12.9124 6.24739 13.5063C6.00141 14.1001 5.93705 14.7536 6.06245 15.384C6.18785 16.0145 6.49738 16.5936 6.9519 17.0481C7.40642 17.5026 7.98552 17.8122 8.61596 17.9376C9.2464 18.063 9.89986 17.9986 10.4937 17.7526C11.0876 17.5066 11.5952 17.0901 11.9523 16.5556C12.3094 16.0211 12.5 15.3928 12.5 14.75V5C12.8608 6.08333 14.2333 8.25 16.8333 8.25" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>              
+              </a>
             </div>
             <div class="footer__copyright">
               <p>&#169; Компанія N-CODE 2023</p>
@@ -203,6 +209,12 @@
                   fill="black"
                 />
               </svg>
+            </a>
+            <a class="social-ico" href="https://www.tiktok.com/@n_code.study" target="_blank">
+              <svg width="30" height="30" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M22 6.83333V16.1667C22 17.7138 21.3854 19.1975 20.2915 20.2915C19.1975 21.3854 17.7138 22 16.1667 22H6.83333C5.28624 22 3.80251 21.3854 2.70854 20.2915C1.61458 19.1975 1 17.7138 1 16.1667V6.83333C1 5.28624 1.61458 3.80251 2.70854 2.70854C3.80251 1.61458 5.28624 1 6.83333 1H16.1667C17.7138 1 19.1975 1.61458 20.2915 2.70854C21.3854 3.80251 22 5.28624 22 6.83333Z" fill="#0B2235" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M9.25 11.5C8.60721 11.5 7.97886 11.6906 7.4444 12.0477C6.90994 12.4048 6.49338 12.9124 6.24739 13.5063C6.00141 14.1001 5.93705 14.7536 6.06245 15.384C6.18785 16.0145 6.49738 16.5936 6.9519 17.0481C7.40642 17.5026 7.98552 17.8122 8.61596 17.9376C9.2464 18.063 9.89986 17.9986 10.4937 17.7526C11.0876 17.5066 11.5952 17.0901 11.9523 16.5556C12.3094 16.0211 12.5 15.3928 12.5 14.75V5C12.8608 6.08333 14.2333 8.25 16.8333 8.25" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>              
             </a>
           </div>
           <div class="footer__copyright">
