--- a/tutors.html
+++ b/tutors.html
@@ -122,7 +122,7 @@
           </div>
           <div class="container">
             <div class="tutors-card__info">
-              <p class="tutors-card__description">Досвід в IT понад 25 років. Конкретно програмування - більш як 8 років. Саме Web...</p>
+              <p class="tutors-card__description">Хочемо вам представити Михайла – нашого викладача із 25-річним досвідом у ІТ. Він спеціалізується на JavaScript...</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
                 <p>Front-End</p>
@@ -145,7 +145,7 @@
           </div>
           <div class="container">
             <div class="tutors-card__info">
-              <p class="tutors-card__description">Професійний викладач (постійна робота у закладі вищої освіти) к.т.н.</p>
+              <p class="tutors-card__description">Андрій – наш професійний викладач. Він має значний досвід у сфері вищої освіти. Андрій має науковий ступінь...</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
                 <p>Front-End</p>
@@ -168,7 +168,7 @@
           </div>
           <div class="container">
             <div class="tutors-card__info">
-              <p class="tutors-card__description">Досвід на фрілансі близько 3-5 місяців. Зараз понад рік працює у...</p>
+              <p class="tutors-card__description">Представляємо вам Андрія, нашого кращого викладача. Він має короткий, але насичений досвід роботи на...</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
                 <p>Front-End</p>
@@ -191,7 +191,7 @@
           </div>
           <div class="container">
             <div class="tutors-card__info">
-              <p class="tutors-card__description">3 роки працює розробником та 6 місяців викладає</p>
+              <p class="tutors-card__description">Влад – це наш викладач. Він провів більше 3 років у програмуванні та працював над різними проєктами. А ще...</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
                 <p>Front-End</p>
@@ -214,7 +214,7 @@
           </div>
           <div class="container">
             <div class="tutors-card__info">
-              <p class="tutors-card__description">1.5 років комерційного досвіду</p>
+              <p class="tutors-card__description">Представляємо вам Сергія, нашого викладача з 1,5 роками комерційного досвіду. Він вже має...</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
                 <p>Front-End</p>
@@ -237,7 +237,7 @@
           </div>
           <div class="container">
             <div class="tutors-card__info">
-              <p class="tutors-card__description">2 роки комерційного досвіду</p>
+              <p class="tutors-card__description">Дозвольте представити Андрія – нашого викладача з 2-річним досвідом у сфері ІТ. Він добре знайомий із світом програму...</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
                 <p>Front-End</p>
@@ -260,7 +260,7 @@
           </div>
           <div class="container">
             <div class="tutors-card__info">
-              <p class="tutors-card__description">3 місяці викладання в N-Code</p>
+              <p class="tutors-card__description">Яна – наша викладачка. Її досвід викладання триває більше 3 місяців. Яна поділиться з вами своїми зна...</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
                 <p>Front-End</p>
@@ -283,7 +283,7 @@
           </div>
           <div class="container">
             <div class="tutors-card__info">
-              <p class="tutors-card__description">Має 2,5 роки професійного досвіду роботи з - html5/css3/scss/js/ts/react/red...</p>
+              <p class="tutors-card__description">Представляємо Олексія – нашого талановитого викладача. Він має великий досвід роботи у сфері веб-роз...</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
                 <p>Front-End</p>
@@ -386,17 +386,12 @@
           </div>
           <div class="mentor-info-popup__bottom">
             <div class="mentor-info__block">
-            <p>Досвід в IT понад 25 років. Конкретно програмування - більш як 8 років. 
-              Саме Web - 6 років. Спеціалізація JavaScript Fullstack. У компаніях ніколи не працював і не збираюся. Маю мінімальний досвід 
-              у фрілансі. Переважно програмую для себе. Але у мене понад 9 років досвіду викладання, 6 з них - програмування та веб. 
-              Загалом більш як 300 учнів з веброзробки, формат - індивідуальний та групи. Понад 20 з них повідомили, що працевлаштувалися. 
-              Дуже люблю вчити, допомагати, відповідати на питання, ділитися досвідом. Віддаю перевагу цілком індивідуальному підходу, 
-              адже всі люди різні. Кожному потрібне інше пояснення на зрозумілих йому прикладах. Надзвичайно полюбляю базові технології, 
-              як то кажуть vanilla: HTML, CSS, JS, NodeJS, DevTools. Бібліотеки, модулі та фреймворки цікавіше писати свої, 
-              ніж користуватися чужими. Хоча, звісно, у комерційній розробці часом обирати не доводиться. Інші технології, 
-              в яких маю обмежений досвід: React, Vue, MongoDB, Bootstrap, SCSS, Express, Python, PHP, SQL. <br> Спокійний, терплячий, оптиміст. 
-              Мови викладання: українська, російська, англійська. 
-              Більше про формати занять у моєму профілі на GitHub:github.com/unibreakfast</p>
+            <p>
+              Хочемо вам представити Михайла – нашого викладача із 25-річним досвідом у ІТ. 
+              Він спеціалізується на JavaScript Fullstack розробці та має понад 9 років досвіду навчання. 
+              Михайло володіє базовими технологіями, такими як HTML, CSS, JS та NodeJS. 
+              З його допомогою понад 20 учнів знайшли роботу.
+            </p>
             </div>
             <p class="mentor-info__course-title">Курс:</p>
             <p>Front-End</p>
@@ -423,7 +418,12 @@
           </div>
           <div class="mentor-info-popup__bottom">
             <div class="mentor-info__block">
-            <p> <b>Досвід роботи:</b> Професійний викладач (постійна робота у закладі вищої освіти) к.т.н. У веб-розробці - понад 10 років. Курси: HTML, CSS, JS</p>
+            <p>
+              Андрій – наш професійний викладач. Він має значний досвід у сфері вищої освіти. 
+              Андрій має науковий ступінь кандидата технічних наук. 
+              У світі веб-розробки він ветеран зі стажем понад 10 років. 
+              Його курси щодо HTML, CSS та JS – це цінний актив для будь-кого, хто прагне вивчити основи веб-розробки.
+            </p>
             </div>
             <p class="mentor-info__course-title">Курс:</p>
             <p>Front-End</p>
@@ -450,8 +450,13 @@
           </div>
           <div class="mentor-info-popup__bottom">
             <div class="mentor-info__block">
-            <p>Досвід на фрілансі близько 3-5 місяців. Зараз понад рік працює у швейцарській компанії Swisscows AG та викладає в N-Code.
-              На основній роботі працює з HTML, CSS, JS, React, Redux, Next.JS</p>
+            <p>
+              Представляємо вам Андрія, нашого кращого викладача. 
+              Він має короткий, але насичений досвід роботи на фрілансі протягом 3-5 місяців. 
+              Андрій приєднався до швейцарської компанії, де працює вже більше року. 
+              Крім того, він викладає в N-Code, де ділиться своїми знаннями та досвідом. 
+              У своїй основній роботі Андрій працює з HTML, CSS, JS, React, Redux та Next.JS.
+            </p>
             </div>
             <p class="mentor-info__course-title">Курс:</p>
             <p>Front-End</p>
@@ -478,7 +483,11 @@
           </div>
           <div class="mentor-info-popup__bottom">
             <div class="mentor-info__block">
-            <p><b>Досвід роботи:</b> 3 роки працює розробником та 6 місяців викладає</p>
+            <p>
+              Влад – це наш викладач. Він провів більше 3 років у програмуванні та працював над різними проєктами. 
+              А ще, протягом останніх 6 місяців, Влад ділиться своїми знаннями з молодшими розробниками(нашими студентами). 
+              Так що готуйтесь до крутих уроків разом з Владом!
+            </p>
             </div>
             <p class="mentor-info__course-title">Курс:</p>
             <p>Front-End</p>
@@ -505,7 +514,10 @@
           </div>
           <div class="mentor-info-popup__bottom">
             <div class="mentor-info__block">
-            <p><b>Досвід роботи:</b> 1.5 років комерційного досвіду</p>
+            <p>
+              Представляємо вам Сергія, нашого викладача з 1,5 роками комерційного досвіду. 
+              Він вже має практичний досвід роботи у сфері веб-розробки та готовий допомогти вам засвоїти основи цієї галузі.
+            </p>
             </div>
             <p class="mentor-info__course-title">Курс:</p>
             <p>Front-End</p>
@@ -532,7 +544,11 @@
           </div>
           <div class="mentor-info-popup__bottom">
             <div class="mentor-info__block">
-            <p><b>Досвід роботи:</b> 2 роки комерційного досвіду</p>
+            <p>
+              Дозвольте представити Андрія – нашого викладача з 2-річним досвідом у сфері ІТ. 
+              Він добре знайомий із світом програмування та готовий поділитися своїми знаннями з вами. 
+              У нашій школі він працює близько 2 місяців та має 7 студентів, які на всі 100% задоволенні навчанням.
+            </p>
             </div>
             <p class="mentor-info__course-title">Курс:</p>
             <p>Front-End</p>
@@ -559,7 +575,10 @@
           </div>
           <div class="mentor-info-popup__bottom">
             <div class="mentor-info__block">
-            <p><b>Досвід роботи:</b> 3 місяці викладання в N-Code</p>
+            <p>
+              Яна – наша викладачка. Її досвід викладання триває більше 3 місяців. 
+              Яна поділиться з вами своїми знаннями та разом з нею ви зможете зрозуміти й опанувати основи розробки.
+            </p>
             </div>
             <p class="mentor-info__course-title">Курс:</p>
             <p>Front-End</p>
@@ -586,7 +605,12 @@
           </div>
           <div class="mentor-info-popup__bottom">
             <div class="mentor-info__block">
-            <p><b>Досвід роботи:</b> 2,5 роки професійного досвіду з - HTML5, CSS3, SCSS, JS, TS, React, Redux</p>
+            <p>
+              Представляємо Олексія – нашого талановитого викладача. 
+              Він має великий досвід роботи у сфері веб-розробки, а саме 2,5 роки. 
+              Олексій експерт в HTML5, CSS3, SCSS, JavaScript (JS), TypeScript (TS), React, Redux, Next.js та Vue. 
+              Його знання та досвід підготують вас до найсучасніших технологій веб-розробки.
+            </p>
             </div>
             <p class="mentor-info__course-title">Курс:</p>
             <p>Front-End</p>
