added slider to salary section

--- a/index.html
+++ b/index.html
@@ -512,56 +512,176 @@
         </div>
       </section>
       <section class="salary">
-        <h2 class="section-title">Кар’eрне зростання у front-END</h2>
-        <div class="salary-card-wrap">
-          <p class="salary-card__text">
+        <h2 class="section-title">Кар’eрне зростання</h2>
+        <div class="section-content">
+          <p class="section-text">
             Кар'єрний ріст та збільшення заробітної плати - це два головних фактори, що приваблюють нових фахівців до сфери ІТ. І не
             даремно, адже ця галузь надає безліч можливостей для саморозвитку та професійного зростання.
           </p>
-          <h3 class="salary__title">Зарплати JavaScript розробника</h3>
-          <div class="salary-card">
-            <p class="salary-card__sum">300 $</p>
-            <div class="salary-card__img">
-              <img src="./img/salary-card-img_1.svg" alt="" />
+
+          <div class="itc-slider salary-slider" data-slider="itc-slider" data-autoplay="false">
+            <div class="itc-slider-wrapper salary-slider">
+              <div class="itc-slider-items salary-slider">
+                <div class="itc-slider-item salary-slider">
+
+                  <h3 class="salary__title">Скільки заробляє Front-end розробник?</h3>
+                  <div class="salary-cards">
+                    <div class="salary-card">
+                      <p class="salary-card__sum">300 $</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_1.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Trainee</p>
+                        <p class="salary-card__rank-time">Від 3 місяців</p>
+                      </div>
+                    </div>
+                    <div class="salary-card">
+                      <p class="salary-card__sum">550$ +</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_2.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Junior</p>
+                        <p class="salary-card__rank-time">Досвід 1-2 роки</p>
+                      </div>
+                    </div>
+                    <div class="salary-card">
+                      <p class="salary-card__sum">1500$ +</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_3.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Middle</p>
+                        <p class="salary-card__rank-time">Досвід від 3-5 років</p>
+                      </div>
+                    </div>
+                    <div class="salary-card">
+                      <p class="salary-card__sum">4000$ +</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_4.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Senior</p>
+                        <p class="salary-card__rank-time">Досвід від 6 років</p>
+                      </div>
+                    </div>
+                    <div class="salary__line"></div>
+                  </div>
+
+                </div>
+
+                <div class="itc-slider-item salary-slider">
+                  
+                  <h3 class="salary__title">Скільки заробляє Python - розробник?</h3>
+                  <div class="salary-cards">
+                    <div class="salary-card">
+                      <p class="salary-card__sum">350 $</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_1.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Trainee</p>
+                        <p class="salary-card__rank-time">Від 3 місяців</p>
+                      </div>
+                    </div>
+                    <div class="salary-card">
+                      <p class="salary-card__sum">800$ +</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_2.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Junior</p>
+                        <p class="salary-card__rank-time">Досвід 1-2 роки</p>
+                      </div>
+                    </div>
+                    <div class="salary-card">
+                      <p class="salary-card__sum">2000$ +</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_3.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Middle</p>
+                        <p class="salary-card__rank-time">Досвід від 3-5 років</p>
+                      </div>
+                    </div>
+                    <div class="salary-card">
+                      <p class="salary-card__sum">4500$ +</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_4.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Senior</p>
+                        <p class="salary-card__rank-time">Досвід від 6 років</p>
+                      </div>
+                    </div>
+                    <div class="salary__line"></div>
+                  </div>
+
+                </div>
+                <div class="itc-slider-item salary-slider">
+                  
+                  <h3 class="salary__title">Скільки заробляє QA?</h3>
+                  <div class="salary-cards">
+                    <div class="salary-card">
+                      <p class="salary-card__sum">200 $</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_1.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Trainee</p>
+                        <p class="salary-card__rank-time">Від 3 місяців</p>
+                      </div>
+                    </div>
+                    <div class="salary-card">
+                      <p class="salary-card__sum">500$ +</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_2.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Junior</p>
+                        <p class="salary-card__rank-time">Досвід 1-2 роки</p>
+                      </div>
+                    </div>
+                    <div class="salary-card">
+                      <p class="salary-card__sum">1000$ +</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_3.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Middle</p>
+                        <p class="salary-card__rank-time">Досвід від 3-5 років</p>
+                      </div>
+                    </div>
+                    <div class="salary-card">
+                      <p class="salary-card__sum">2500$ +</p>
+                      <div class="salary-card__img">
+                        <img src="./img/salary-card-img_4.svg" alt="" />
+                      </div>
+                      <div class="item-group">
+                        <p class="salary-card__rank">Senior</p>
+                        <p class="salary-card__rank-time">Досвід від 6 років</p>
+                      </div>
+                    </div>
+                    <div class="salary__line"></div>
+                  </div>
+
+                </div>
+              </div>
             </div>
-            <div class="item-group">
-              <p class="salary-card__rank">Trainee</p>
-              <p class="salary-card__rank-time">Від 3 місяців</p>
-            </div>
+  
+            <ol class="itc-slider-indicators">
+              <li class="itc-slider-indicator" data-slide-to="0"></li>
+              <li class="itc-slider-indicator" data-slide-to="1"></li>
+              <li class="itc-slider-indicator" data-slide-to="2"></li>
+            </ol>
+  
+            <button class="itc-slider-btn itc-slider-btn-prev salary-slider"></button>
+            <button class="itc-slider-btn itc-slider-btn-next salary-slider"></button>
           </div>
-          <div class="salary-card">
-            <p class="salary-card__sum">700$ +</p>
-            <div class="salary-card__img">
-              <img src="./img/salary-card-img_2.svg" alt="" />
-            </div>
-            <div class="item-group">
-              <p class="salary-card__rank">Junior</p>
-              <p class="salary-card__rank-time">Досвід 1-2 роки</p>
-            </div>
-          </div>
-          <div class="salary-card">
-            <p class="salary-card__sum">1500$ +</p>
-            <div class="salary-card__img">
-              <img src="./img/salary-card-img_3.svg" alt="" />
-            </div>
-            <div class="item-group">
-              <p class="salary-card__rank">Middle</p>
-              <p class="salary-card__rank-time">Досвід від 3-5 років</p>
-            </div>
-          </div>
-          <div class="salary-card">
-            <p class="salary-card__sum">3000$ +</p>
-            <div class="salary-card__img">
-              <img src="./img/salary-card-img_4.svg" alt="" />
-            </div>
-            <div class="item-group">
-              <p class="salary-card__rank">Senior</p>
-              <p class="salary-card__rank-time">Досвід від 6 років</p>
-            </div>
-          </div>
-          <div class="salary__line"></div>
+
         </div>
-        <a class="btn" href="#callback-section">Записатись на пробне заняття</a>
+        <a class="btn btn-trial" href="#callback-section">Записатись на пробне заняття</a>
       </section>
       <section class="feedback">
         <div class="section-title-wrap">
