--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <div class="slider">
       <div class="slide">
         <h1 class="title"><span class="logo-title">N-CODE</span> - Місце зустрічі з твоїм репетитором</h1>
+        <p class="subtitle">Вивчай програмування та IT професії онлайн</p>
         <a class="btn slide__btn" href="#callback-section">Замовити консультацію</a>
       </div>
     </div>
