teaching section redesigned

--- a/index.html
+++ b/index.html
@@ -119,72 +119,6 @@
       </div>
     </div>
     <div class="content-container">
-      <div class="header-card__mob">
-        <div class="header-card-wrap">
-          <div class="header-card">
-            <div class="header-card__title-wrap">
-              <p class="header-card__title">Допомогаємо розібратись у Front-End</p>
-              <span class="header-card__arrow"></span>
-            </div>
-            <p class="header-card__text">Навчання з репетиторами з 0 до профі, навчання для дітей</p>
-          </div>
-          <div class="header-card">
-            <div class="header-card__title-wrap">
-              <p class="header-card__title">Підтримуємо при пошуку роботи</p>
-              <span class="header-card__arrow"></span>
-            </div>
-            <p class="header-card__text">Підготовка до співбесіди, формування резюме, напрацювання портфоліо</p>
-          </div>
-          <div class="header-card">
-            <div class="header-card__title-wrap">
-              <p class="header-card__title">Ефективність та швидкий ріст</p>
-              <span class="header-card__arrow"></span>
-            </div>
-            <p class="header-card__text">Навчання один на один з репетитором, 80% практики 20% теорії, розбір коду</p>
-          </div>
-          <div class="mob_block">
-            <div class="header-card">
-              <div class="header-card__title-wrap">
-                <p class="header-card__title">Впізнаєте в цих питаннях себе?</p>
-                <span class="header-card__arrow"></span>
-              </div>
-              <ul class="header-card__text">
-                <li>Хочеш розібратись у Javascript, React, та супутніх технологіях (Redux, MobX, React Query, Apollo GraphQl)?</li>
-                <li>Світчер чи джун і не знаєш з чого почати професійний розвиток в галузі Front-End?</li>
-                <li>Складно знайти першу роботу або не можеш розібратись з тестовим?</li>
-                <li>Ваша дитина хоче вчитись програмувати і потрібен професійний репетитор?</li>
-                <li>Потрібне кодрев'ю чи допомога з Pet проектом?</li>
-                <li>Хочеш отримати нову високооплачувану професію, але не знаєш з чого почати?</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="header-card__desktop">
-        <div class="header-card-wrap">
-          <div class="header-card">
-            <div class="header-card__title-wrap">
-              <p class="header-card__title">Допомогаємо розібратись у Front-End</p>
-              <span class="header-card__arrow"></span>
-            </div>
-            <p class="header-card__text">Навчання з репетиторами з 0 до профі, навчання для дітей</p>
-          </div>
-          <div class="header-card">
-            <div class="header-card__title-wrap">
-              <p class="header-card__title">Підтримуємо при пошуку роботи</p>
-              <span class="header-card__arrow"></span>
-            </div>
-            <p class="header-card__text">Підготовка до співбесіди, формування резюме, напрацювання портфоліо</p>
-          </div>
-          <div class="header-card">
-            <div class="header-card__title-wrap">
-              <p class="header-card__title">Ефективність та швидкий ріст</p>
-              <span class="header-card__arrow"></span>
-            </div>
-            <p class="header-card__text">Навчання один на один з репетитором, 80% практики 20% теорії, розбір коду</p>
-          </div>
-        </div>
-      </div>
       <section class="consult">
         <div class="container">
           <div class="col">
@@ -206,6 +140,66 @@
           </div>
         </div>
       </section>
+    </div>
+    <div class="content-container bg-dark">
+      <section class="teaching">
+        <div class="teaching-content">
+          <h1 class="teaching-content__title">Напрямки навчання</h1>
+          <p class="teaching-content__subtitle">При індивідуальному навчанні ми пропонуємо:</p>
+          <ul class="teaching-content__list">
+            <li>Зручний графік занять</li>
+            <li>Оплата за кожний урок окремо</li>
+            <li>Самостійно обирай репетитора</li>
+          </ul>
+        </div>
+        <div class="teaching-card">
+          <h1 class="teaching-card__title">Front-end</h1>
+          <hr color="#FD460E">
+          <p class="teaching-card__text">
+            Створення веб-сайтів та додатків - цікавий та творчий процес, який поєднує вміння написати ефективний код та створити зручний, 
+            інтуїтивно зрозумілий та привабливий інтерфейс. Front-end розробник - 
+            одна з найактуальніших та високооплачуваних спеціальностей, попит на яку постійно зростає.
+          </p>
+        </div>
+        <div class="teaching-card">
+          <h1 class="teaching-card__title">Основи роботи з комп'ютером</h1>
+          <hr color="#FD460E">
+          <p class="teaching-card__text">
+            Сучасний світ неможливо уявити без комп’ютерних технологій, які міцно укоренилися майже у всіх сферах нашого життя: 
+            побуті, освіті, бізнесі, науці, соціальних та державних інституціях. 
+            Тож для комфортного життя у XXI столітті людина має володіти бодай базовими навичками роботи з ПК.
+          </p>
+        </div>
+        <div class="teaching-card">
+          <h1 class="teaching-card__title">QA (контроль якості програмного забезпечення)</h1>
+          <hr color="#FD460E">
+          <p class="teaching-card__text">
+            Робота QA-спеціалістів полягає у забезпеченні якості програмного продукту та зосереджена головним чином на його тестуванні. 
+            Почати працювати тестувальником дуже легко - достатньо мати базові знання і навички у пошуку та документуванні 
+            помилок (багів) у програмних продуктах.
+          </p>
+        </div>
+        <div class="teaching-card">
+          <h1 class="teaching-card__title">Python (універсальна мова програмування)</h1>
+          <hr color="#FD460E">
+          <p class="teaching-card__text">
+            Одна з найпопулярніших мов програмування. Використовується багатьма великими компаніями, такими як Google та Facebook. 
+            Завдяки простому, логічному та зрозумілому синтаксису, а також широкому спектру застосування має велику спільноту 
+            розробників по всьому світу.
+          </p>
+        </div>
+        <div class="teaching-card">
+          <h1 class="teaching-card__title">English</h1>
+          <hr color="#FD460E">
+          <p class="teaching-card__text">
+            Англійська мова є міжнародною мовою спілкування, тому її знання відкриває вам більше можливостей для 
+            навчання та працевлаштування як в Україні, так і за кордоном. Якщо ж ви просто полюбляєте подорожувати, 
+            англійська мова також буде вам у пригоді і допоможе спілкуватись з людьми у різних країнах світу.
+          </p>
+        </div>
+      </section>
+    </div>
+    <div class="content-container">
       <section class="advantages" id="advantages">
         <h2 class="section-title">НАШi ПЕРЕВАГИ</h2>
         <div class="container">
