--- a/index.html
+++ b/index.html
@@ -197,6 +197,74 @@
             англійська мова також буде вам у пригоді і допоможе спілкуватись з людьми у різних країнах світу.
           </p>
         </div>
+
+        <div class="accordion teaching-accordion">
+          <div class="accordion__item teaching-accordion-item">
+            <div class="accordion__title teaching-accordion-title">
+              Front-end
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="9" viewBox="0 0 14 9" fill="none">
+                <path d="M1 1L7 7L13 1" stroke="#242524" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <div class="accordion__content teaching-accordion-content">
+              Створення веб-сайтів та додатків - цікавий та творчий процес, який поєднує вміння написати ефективний код та створити зручний, 
+              інтуїтивно зрозумілий та привабливий інтерфейс. Front-end розробник - 
+              одна з найактуальніших та високооплачуваних спеціальностей, попит на яку постійно зростає.
+            </div>
+          </div>
+          <div class="accordion__item teaching-accordion-item">
+            <div class="accordion__title teaching-accordion-title">
+              Основи роботи з комп'ютером
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="9" viewBox="0 0 14 9" fill="none">
+                <path d="M1 1L7 7L13 1" stroke="#242524" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <div class="accordion__content teaching-accordion-content">
+              Сучасний світ неможливо уявити без комп’ютерних технологій, які міцно укоренилися майже у всіх сферах нашого життя: 
+              побуті, освіті, бізнесі, науці, соціальних та державних інституціях. 
+              Тож для комфортного життя у XXI столітті людина має володіти бодай базовими навичками роботи з ПК.
+            </div>
+          </div>
+          <div class="accordion__item teaching-accordion-item">
+            <div class="accordion__title teaching-accordion-title">
+              QA (контроль якості програмного забезпечення)
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="9" viewBox="0 0 14 9" fill="none">
+                <path d="M1 1L7 7L13 1" stroke="#242524" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <div class="accordion__content teaching-accordion-content">
+              Робота QA-спеціалістів полягає у забезпеченні якості програмного продукту та зосереджена головним чином на його тестуванні. 
+              Почати працювати тестувальником дуже легко - достатньо мати базові знання і навички у пошуку та документуванні 
+              помилок (багів) у програмних продуктах.
+            </div>
+          </div>
+          <div class="accordion__item teaching-accordion-item">
+            <div class="accordion__title teaching-accordion-title">
+              Python (універсальна мова програмування)
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="9" viewBox="0 0 14 9" fill="none">
+                <path d="M1 1L7 7L13 1" stroke="#242524" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <div class="accordion__content teaching-accordion-content">
+              Одна з найпопулярніших мов програмування. Використовується багатьма великими компаніями, такими як Google та Facebook. 
+              Завдяки простому, логічному та зрозумілому синтаксису, а також широкому спектру застосування має велику спільноту 
+              розробників по всьому світу.
+            </div>
+          </div>
+          <div class="accordion__item teaching-accordion-item">
+            <div class="accordion__title teaching-accordion-title">
+              English
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="9" viewBox="0 0 14 9" fill="none">
+                <path d="M1 1L7 7L13 1" stroke="#242524" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <div class="accordion__content teaching-accordion-content">
+              Англійська мова є міжнародною мовою спілкування, тому її знання відкриває вам більше можливостей для 
+              навчання та працевлаштування як в Україні, так і за кордоном. Якщо ж ви просто полюбляєте подорожувати, 
+              англійська мова також буде вам у пригоді і допоможе спілкуватись з людьми у різних країнах світу.
+            </div>
+          </div>
+        </div>
       </section>
     </div>
     <div class="content-container">
