fixed design due to requierments

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="col">
             <div class="consult__title">
               <h2>Впізнаєте в цих питаннях себе?</h2>
-              <p class="consult__sub-title">Якщо так, допоможемо знайти перевіреного репетитора з програмування для Вас чи Вашої дитини</p>
+              <p class="consult__sub-title">Якщо так, допоможемо знайти перевіреного репетитора з програмування для Вас чи Вашої дитини!</p>
             </div>
             <a class="consult__btn btn" href="#callback-section">Отримати консультацію менеджера</a>
           </div>
@@ -799,12 +799,12 @@
         <a class="mob_btn btn" href="feedback.html">Всі відгуки</a>
       </section>
       <section class="faq">
-        <h2 class="section-title">Питання i вiдповiдi</h2>
+        <h2 class="section-title">Найпопулярніші питання</h2>
         <div class="accordion">
           <div class="accordion__item">
             <div class="accordion__header">Яка тривалість навчання?</div>
             <div class="accordion__content">
-              <strong>Відповідь: </strong>Тривалість навчання залежить від Ваших початкових навичок та індивідуального темпу освоєння
+              Тривалість навчання залежить від Ваших початкових навичок та індивідуального темпу освоєння
               матеріалу. За перші 3 місяці навчання будуть базові знання, через 6 місяців буде хороша база, інший час - це практика
               (рекомендується від 3х до 6 місяців).
             </div>
@@ -812,21 +812,21 @@
           <div class="accordion__item">
             <div class="accordion__header">Яка вартість навчання?</div>
             <div class="accordion__content">
-              <strong>Відповідь: </strong> Ціна за одну годину навчання 300 грн для початківця та 400 грн для студентів, які хочуть вивчати
+              Ціна за одну годину навчання 300 грн для початківця та 400 грн для студентів, які хочуть вивчати
               фреймворк або поглиблено JS.
             </div>
           </div>
           <div class="accordion__item">
             <div class="accordion__header">Чи є у вас сертифікати або дипломи після закінчення курсу?</div>
             <div class="accordion__content">
-              <strong>Відповідь: </strong> Так, ми надаємо сертифікати та рекомендації від репетиторів після успішного закінчення курсу. Вони
+              Так, ми надаємо сертифікати та рекомендації від репетиторів після успішного закінчення курсу. Вони
               не тільки підтверджують отримані знання та навички, а й можуть бути корисними при подальшому пошуку роботи.
             </div>
           </div>
           <div class="accordion__item">
             <div class="accordion__header">Чи є в вашій IT-школі можливість працевлаштування після закінчення навчання?</div>
             <div class="accordion__content">
-              <strong>Відповідь: </strong> Ми надаємо підтримку в працевлаштуванні для наших випускників, а саме: допомагаємо скласти
+              Ми надаємо підтримку в працевлаштуванні для наших випускників, а саме: допомагаємо скласти
               релевантне резюме, надаємо сертифікат та рекомендаційний лист, який не тільки підтверджує отримані знання та навички, а і
               підвищить шанси знайти роботу. Наші репетитори мають багатий практичний досвід на реальних проектах і готові поділитись ним з
               Вами.
@@ -835,21 +835,21 @@
           <div class="accordion__item">
             <div class="accordion__header">Як можна записатися на пробне заняття?</div>
             <div class="accordion__content">
-              <strong>Відповідь: </strong> Щоб записатися на пробне заняття, ви можете залишити свій номер телефону, щоб ми могли звязатися
+              Щоб записатися на пробне заняття, ви можете залишити свій номер телефону, щоб ми могли звязатися
               з вами для уточнення інформації.
             </div>
           </div>
           <div class="accordion__item">
             <div class="accordion__header">Яка кваліфікація у ваших репетиторів?</div>
             <div class="accordion__content">
-              <strong>Відповідь: </strong> Працюємо з репетиторами, які мають практичний досвід від 1- 10 років у провідних ІТ - компаніях,
+              Працюємо з репетиторами, які мають практичний досвід від 1- 10 років у провідних ІТ - компаніях,
               такі як: Luxoft, Uber, GlobalLogic, Plarium, N-iX та інші.
             </div>
           </div>
           <div class="accordion__item">
             <div class="accordion__header">Як відбувається оплата?</div>
             <div class="accordion__content">
-              <strong>Відповідь: </strong> Оплата відбувається на нашій платформі у розділі “гаманець” через платіжну систему LiqPay . Також
+              Оплата відбувається на нашій платформі у розділі “гаманець” через платіжну систему LiqPay . Також
               є можливіть відвідати пробний урок, де ви з репетитором познайомитеся та обговорити деталі навчання.
             </div>
           </div>
