added hyperlink to callback form

--- a/index.html
+++ b/index.html
@@ -524,7 +524,11 @@
                   </ul>
                 </div>
                 <div class="teaching-slider__footer">
-                  <button class="btn">Записатись</button>
+                  <button class="btn">
+                    <a href="#callback-section">
+                      Записатись
+                    </a>
+                  </button>
                 </div>
               </div>
               <div class="itc-slider-item teaching-slider">
@@ -546,7 +550,11 @@
                   </ul>
                 </div>
                 <div class="teaching-slider__footer">
-                  <button class="btn">Записатись</button>
+                  <button class="btn">
+                    <a href="#callback-section">
+                      Записатись
+                    </a>
+                  </button>
                 </div>
               </div>
               <div class="itc-slider-item teaching-slider">
@@ -568,7 +576,11 @@
                   </ul>
                 </div>
                 <div class="teaching-slider__footer">
-                  <button class="btn">Записатись</button>
+                  <button class="btn">
+                    <a href="#callback-section">
+                      Записатись
+                    </a>
+                  </button>
                 </div>
               </div>
               <div class="itc-slider-item teaching-slider">
@@ -590,7 +602,11 @@
                   </ul>
                 </div>
                 <div class="teaching-slider__footer">
-                  <button class="btn">Записатись</button>
+                  <button class="btn">
+                    <a href="#callback-section">
+                      Записатись
+                    </a>
+                  </button>
                 </div>
               </div>
               <div class="itc-slider-item teaching-slider">
@@ -612,7 +628,11 @@
                   </ul>
                 </div>
                 <div class="teaching-slider__footer">
-                  <button class="btn">Записатись</button>
+                  <button class="btn">
+                    <a href="#callback-section">
+                      Записатись
+                    </a>
+                  </button>
                 </div>
               </div>
             </div>
