--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           </div>
           <div class="accordion__item teaching-accordion-item">
             <div class="accordion__title teaching-accordion-title">
-              QA (контроль якості програмного забезпечення)
+              QA (контроль якості <br> програмного забезпечення)
               <svg xmlns="http://www.w3.org/2000/svg" width="14" height="9" viewBox="0 0 14 9" fill="none">
                 <path d="M1 1L7 7L13 1" stroke="#242524" stroke-width="2" stroke-linecap="round"/>
               </svg>
@@ -241,7 +241,7 @@
           </div>
           <div class="accordion__item teaching-accordion-item">
             <div class="accordion__title teaching-accordion-title">
-              Python (універсальна мова програмування)
+              Python (універсальна мова <br> програмування)
               <svg xmlns="http://www.w3.org/2000/svg" width="14" height="9" viewBox="0 0 14 9" fill="none">
                 <path d="M1 1L7 7L13 1" stroke="#242524" stroke-width="2" stroke-linecap="round"/>
               </svg>
@@ -265,6 +265,11 @@
               англійська мова також буде вам у пригоді і допоможе спілкуватись з людьми у різних країнах світу.
             </div>
           </div>
+          <button class="btn">
+            <a href="#callback-section">
+              Записатись
+            </a>
+          </button>
         </div>
       </section>
     </div>
@@ -502,13 +507,13 @@
       <section class="about-teaching">
         <h2 class="section-title">Про напрямки</h2>
 
-        <div class="itc-slider teaching-slider" data-slider="itc-slider">
-          <div class="itc-slider-wrapper teaching-slider">
-            <div class="itc-slider-items teaching-slider">
-              <div class="itc-slider-item teaching-slider">
-                <div class="teaching-slider__content">
-                  <h4 class="teaching-slider__title">QA (контроль якості програмного забезпечення)</h4>
-                  <ul class="teaching-slider__list">
+        <div class="itc-slider about-teaching-slider" data-slider="itc-slider">
+          <div class="itc-slider-wrapper about-teaching-slider">
+            <div class="itc-slider-items about-teaching-slider">
+              <div class="itc-slider-item about-teaching-slider">
+                <div class="about-teaching-slider__content">
+                  <h4 class="about-teaching-slider__title">QA (контроль якості програмного забезпечення)</h4>
+                  <ul class="about-teaching-slider__list">
                     <li>
                       Низький поріг входу. Для того, аби знайти свою першу роботу, QA-спеціалістам не потрібне багатомісячне навчання, достатньо мати базові знання і навички у пошуку та документуванні помилок (багів) у програмних продуктах.
                     </li>
@@ -523,7 +528,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="teaching-slider__footer">
+                <div class="about-teaching-slider__footer">
                   <button class="btn">
                     <a href="#callback-section">
                       Записатись
@@ -531,10 +536,10 @@
                   </button>
                 </div>
               </div>
-              <div class="itc-slider-item teaching-slider">
-                <div class="teaching-slider__content">
-                  <h4 class="teaching-slider__title">Front-end (створення веб-сайтів)</h4>
-                  <ul class="teaching-slider__list">
+              <div class="itc-slider-item about-teaching-slider">
+                <div class="about-teaching-slider__content">
+                  <h4 class="about-teaching-slider__title">Front-end (створення веб-сайтів)</h4>
+                  <ul class="about-teaching-slider__list">
                     <li>
                       Front-end розробник має можливість у максимальній мірі реалізувати свої технічні навички, поєднуючи в одне ціле інтерфейс веб-сайтів та додатків з їх функціональністю.
                     </li>
@@ -549,7 +554,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="teaching-slider__footer">
+                <div class="about-teaching-slider__footer">
                   <button class="btn">
                     <a href="#callback-section">
                       Записатись
@@ -557,10 +562,10 @@
                   </button>
                 </div>
               </div>
-              <div class="itc-slider-item teaching-slider">
-                <div class="teaching-slider__content">
-                  <h4 class="teaching-slider__title">Python (універсальна мова програмування)</h4>
-                  <ul class="teaching-slider__list">
+              <div class="itc-slider-item about-teaching-slider">
+                <div class="about-teaching-slider__content">
+                  <h4 class="about-teaching-slider__title">Python (універсальна мова програмування)</h4>
+                  <ul class="about-teaching-slider__list">
                     <li>
                       Одна з найпопулярніших мов програмування. Посідає третє місце у рейтингу мов програмування 2023 року. Використовується багатьма великими компаніями, такими як Google та Facebook. Має велику спільноту розробників по всьому світу.
                     </li>
@@ -575,7 +580,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="teaching-slider__footer">
+                <div class="about-teaching-slider__footer">
                   <button class="btn">
                     <a href="#callback-section">
                       Записатись
@@ -583,10 +588,10 @@
                   </button>
                 </div>
               </div>
-              <div class="itc-slider-item teaching-slider">
-                <div class="teaching-slider__content">
-                  <h4 class="teaching-slider__title">Основи роботи з комп'ютером</h4>
-                  <ul class="teaching-slider__list">
+              <div class="itc-slider-item about-teaching-slider">
+                <div class="about-teaching-slider__content">
+                  <h4 class="about-teaching-slider__title">Основи роботи з комп'ютером</h4>
+                  <ul class="about-teaching-slider__list">
                     <li>
                       Знайомство з апаратним забезпеченням допоможе Вам зробити вірний та свідомий вибір при покупці персонального комп'ютеру та ноутбуку, самостійно підключити до них переферійне обладнання: монітор, принтер, сканер тощо.
                     </li>
@@ -601,7 +606,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="teaching-slider__footer">
+                <div class="about-teaching-slider__footer">
                   <button class="btn">
                     <a href="#callback-section">
                       Записатись
@@ -609,10 +614,10 @@
                   </button>
                 </div>
               </div>
-              <div class="itc-slider-item teaching-slider">
-                <div class="teaching-slider__content">
-                  <h4 class="teaching-slider__title">Англійська мова</h4>
-                  <ul class="teaching-slider__list">
+              <div class="itc-slider-item about-teaching-slider">
+                <div class="about-teaching-slider__content">
+                  <h4 class="about-teaching-slider__title">Англійська мова</h4>
+                  <ul class="about-teaching-slider__list">
                     <li>
                       Більше можливостей працевлаштування.Англійська мова є міжнародною мовою бізнесу, тому знання її відкриває вам більше можливостей працевлаштування як в Україні, так і за кордоном.
                     </li>
@@ -627,7 +632,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="teaching-slider__footer">
+                <div class="about-teaching-slider__footer">
                   <button class="btn">
                     <a href="#callback-section">
                       Записатись
@@ -641,6 +646,155 @@
           <button class="itc-slider-btn itc-slider-btn-prev"></button>
           <button class="itc-slider-btn itc-slider-btn-next"></button>
         </div>
+
+        <div class="accordion about-teaching-accordion">
+          <div class="accordion__item about-teaching-accordion-item">
+            <div class="accordion__title about-teaching-accordion-title">
+              Front-end <br> (створення веб-сайтів)
+              <svg width="14" height="9" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1L7 7L13 1" stroke="white" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <div class="accordion__content about-teaching-accordion-content">
+              <ul class="about-teaching-accordion-content__list">
+                <li>
+                  Front-end розробник має можливість у максимальній мірі реалізувати свої технічні навички, поєднуючи в одне ціле інтерфейс веб-сайтів та додатків з їх функціональністю.
+                </li>
+                <li>
+                  Навчання на front-end розробника можна побудувати за принципом "від простого - до складного". Спочатку ви вивчаєте HTML та CSS та оволодіваєте вмінням верстки, потім додаєте знання JavaScript, які дозволять вам створювати динамічні веб-сайти та додатки.
+                </li>
+                <li>
+                  Попит на front-end розробників зростає з кожним роком. Це пов'язано з тим, що все більше компаній впроваджують процеси автоматизації, інтегровані у мережу Інтернет. 
+                </li>
+                <li>
+                  У front-end розробників висока оплата праці. За даними українського сервісу пошуку роботи http://Work.ua, середня заробітна плата front-end розробника складає $1000, висококваліфіковані та досвідчені спеціалісти заробляють ще більше.
+                </li>
+              </ul>
+              <button class="btn">
+                <a href="#callback-section">
+                  Записатись
+                </a>
+              </button>
+            </div>
+          </div>
+          <div class="accordion__item about-teaching-accordion-item">
+            <div class="accordion__title about-teaching-accordion-title">
+              QA (контроль якості <br> програмного забезпечення)
+              <svg width="14" height="9" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1L7 7L13 1" stroke="white" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <div class="accordion__content about-teaching-accordion-content">
+              <ul class="about-teaching-accordion-content__list">
+                <li>
+                  Низький поріг входу. Для того, аби знайти свою першу роботу, QA-спеціалістам не потрібне багатомісячне навчання, достатньо мати базові знання і навички у пошуку та документуванні помилок (багів) у програмних продуктах.
+                </li>
+                <li>
+                  Постійний саморозвиток. Специфіка роботи QA-спеціалістів, яка полягає у необхідності глибоко вникати у деталі програмного продукту, вимагає від них постійного освоєння нових технологій та розвитку аналітичних здібностей.
+                </li>
+                <li>
+                  Можливість поступового професійного зростання: від звичайного тестувальника до повноцінного QA-інженера, відповідального за комплексний підхід у забезпеченні якості програмного продукту. 
+                </li>
+                <li>
+                  Різноманітні вектори подальшого розвитку. Можна за бажанням зануритись у будь-яку специфічну сферу тестування (ігри, платформи, веб-додатки тощо) або навіть із часом перейти до команди розробників.
+                </li>
+              </ul>
+              <button class="btn">
+                <a href="#callback-section">
+                  Записатись
+                </a>
+              </button>
+            </div>
+          </div>
+          <div class="accordion__item about-teaching-accordion-item">
+            <div class="accordion__title about-teaching-accordion-title">
+              Python (універсальна мова <br> програмування)
+              <svg width="14" height="9" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1L7 7L13 1" stroke="white" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <div class="accordion__content about-teaching-accordion-content">
+              <ul class="about-teaching-accordion-content__list">
+                <li>
+                  Одна з найпопулярніших мов програмування. Посідає третє місце у рейтингу мов програмування 2023 року. Використовується багатьма великими компаніями, такими як Google та Facebook. Має велику спільноту розробників по всьому світу.
+                </li>
+                <li>
+                  Легке засвоєння. Python має простий, логічний та зрозумілий синтаксис, тому ідеально підходить в якості першої мови програмування навіть для новачків. Для написання програми на Python необхідно значно менше коду порівняно з іншими мовами програмування, такими, наприклад, як Java.
+                </li>
+                <li>
+                  Широкий спектр застосування (веб-розробка, аналіз даних, автоматизація, ігри). Базова функціональність розширюється за рахунок великої кількості додаткових бібліотек. 
+                </li>
+                <li>
+                  Гнучкість та універсальність. Програми на Python працюють без додаткових коригувань на різних платформах та операційних системах: Windows, macOS, Linux та Unix. Розробники можуть легко поєднувати Python з іншими популярними мовами програмування, такими як Java, C та C++.
+                </li>
+              </ul>
+              <button class="btn">
+                <a href="#callback-section">
+                  Записатись
+                </a>
+              </button>
+            </div>
+          </div>
+          <div class="accordion__item about-teaching-accordion-item">
+            <div class="accordion__title about-teaching-accordion-title">
+              Основи роботи з комп'ютером
+              <svg width="14" height="9" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1L7 7L13 1" stroke="white" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <div class="accordion__content about-teaching-accordion-content">
+              <ul class="about-teaching-accordion-content__list">
+                <li>
+                  Знайомство з апаратним забезпеченням допоможе Вам зробити вірний та свідомий вибір при покупці персонального комп'ютеру та ноутбуку, самостійно підключити до них переферійне обладнання: монітор, принтер, сканер тощо.
+                </li>
+                <li>
+                  Розгляд основних типів програмного забезпечення дозволить Вам правильно обрати додаткову програму в залежності від її призначення: робота з файлами, текстом, графікою, відео тощо.
+                </li>
+                <li>
+                  Огляд популярних операційних систем (Windows, Linux та MacOS) дозволить Вам зрозуміти їх можливості та відмінності, навчить основним принцимам роботи з ними. 
+                </li>
+                <li>
+                  Засвоєння інформації про мережу Інтернет дозволить Вам не тільки працювати з браузером, інтернет-месенджерами та іншими мережевими програмами, а й навчить елементаним правилам безпеки та допоможе уникнути зайвих неприємностей.
+                </li>
+              </ul>
+              <button class="btn">
+                <a href="#callback-section">
+                  Записатись
+                </a>
+              </button>
+            </div>
+          </div>
+          <div class="accordion__item about-teaching-accordion-item">
+            <div class="accordion__title about-teaching-accordion-title">
+              Англійська мова
+              <svg width="14" height="9" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1L7 7L13 1" stroke="white" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <div class="accordion__content about-teaching-accordion-content">
+              <ul class="about-teaching-accordion-content__list">
+                <li>
+                  Більше можливостей працевлаштування.Англійська мова є міжнародною мовою бізнесу, тому знання її відкриває вам більше можливостей працевлаштування як в Україні, так і за кордоном.
+                </li>
+                <li>
+                  Більше можливостей для навчання.Якщо ви хочете продовжити навчання в університеті або післядипломній освіті, знання англійської мови вам знадобиться.
+                </li>
+                <li>
+                  Більше можливостей для навчання.Якщо ви хочете продовжити навчання в університеті або післядипломній освіті, знання англійської мови вам знадобиться. 
+                </li>
+                <li>
+                  Більше можливостей для подорожей.Якщо ви любите подорожувати, знання англійської мови вам знадобиться.Англійська є однією з найпоширеніших мов у світі, тому вона необхідна для спілкування з людьми в різних країнах.
+                </li>
+              </ul>
+              <button class="btn">
+                <a href="#callback-section">
+                  Записатись
+                </a>
+              </button>
+            </div>
+          </div>
+        </div>
+
       </section>
       <section class="roadmap">
         <h2 class="section-title">ЯК СТАТИ КРУТИМ РОЗРОБНИКОМ?</h2>
