fix: inputs accept .pdf and .docx

--- a/index.html
+++ b/index.html
@@ -1904,7 +1904,7 @@
           <div class="input-wrapper">
             <label class="required file-upload" for="file">
               <span class="placeholder">Прикріпити файл з резюме</span>
-              <input id="file" class="file" type="file" name="attachment" accept=".pdf" required="required" />
+              <input id="file" class="file" type="file" name="attachment" accept=".pdf,.docx" required="required" />
             </label>
             <label for="linkedIn">
               <input class="link" type="text" name="linkedIn" placeholder="LinkedIn" />
